# atdecc

./: .gitignore  CMakeLists.txt  README.md  entity.cpp  msg_examples.c  protocolAaAecpdu.cpp  protocolAcmpdu.cpp  protocolAdpdu.cpp  protocolAecpdu.cpp  protocolAemAecpdu.cpp  protocolAemPayloads.cpp  protocolAvtpdu.cpp  utils.cpp
include/: endian.hpp  entity.hpp  entityAddressAccessTypes.hpp  entityEnums.hpp  entityModel.hpp  entityModelTree.hpp  entityModelTreeCommon.hpp  entityModelTreeDynamic.hpp  entityModelTreeStatic.hpp  entityModelTypes.hpp  memoryBuffer.hpp  protocolAaAecpdu.hpp  protocolAcmpdu.hpp  protocolAdpdu.hpp  protocolAecpdu.hpp  protocolAemAecpdu.hpp  protocolAemPayloadSizes.hpp  protocolAemPayloads.hpp  protocolAvtpdu.hpp  protocolDefines.hpp  serialization.hpp  uniqueIdentifier.hpp  utils.hpp
